# rollout

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SKILLS.md  deny.toml  docker-compose.test.yml  package-lock.json  package.json
crates/rollout-algo-rm/: Cargo.toml
crates/rollout-algo-rm/src/: algo.rs  data.rs  lib.rs  loss.rs
crates/rollout-algo-rm/tests/: bradley_terry_loss.rs  checkpoint_roundtrip.rs  snapshot_resume.rs
crates/rollout-algo-sft/: Cargo.toml
crates/rollout-algo-sft/src/: algo.rs  data.rs  lib.rs
crates/rollout-algo-sft/tests/: data_loader.rs  happy_path.rs  snapshot_resume.rs
crates/rollout-backend-vllm/: Cargo.toml
crates/rollout-backend-vllm/benches/: throughput.rs
crates/rollout-backend-vllm/src/: backend.rs  engine.rs  errors.rs  lib.rs  python_glue.rs  train.rs
crates/rollout-backend-vllm/tests/: backend_stub.rs  pyo3_bridge_smoke.rs  qwen25_assistant_mask.rs  sampling_params.rs  snapshot_resume_live.rs  train_thread_smoke.rs  vllm_generate.rs  vllm_init.rs
crates/rollout-cli/: Cargo.toml  README.md
crates/rollout-cli/src/: cloud_factory.rs  eval.rs  infer.rs  infer_config.rs  main.rs  snapshot.rs  train.rs  worker.rs
crates/rollout-cli/src/commands/: mod.rs
crates/rollout-cli/tests/: cli_help.rs  cloud_config_dry_run.rs  doctor_smoke.rs  eval_cli.rs  infer_dry_run.rs  restart_no_duplicates.rs  snapshot_subcommands.rs  train_dry_run.rs
crates/rollout-cloud-aws/: Cargo.toml
crates/rollout-cloud-aws/docs/: bucket-setup.md
crates/rollout-cloud-aws/src/: config.rs  error.rs  lib.rs
crates/rollout-cloud-aws/src/imds/: mod.rs
crates/rollout-cloud-aws/src/s3/: get_stream.rs  mod.rs  put_stream.rs
crates/rollout-cloud-aws/src/secrets_manager/: mod.rs
crates/rollout-cloud-aws/src/sqs/: lease.rs  mod.rs
crates/rollout-cloud-aws/tests/: conformance.rs  imds_v1_disabled_falls_back_gracefully.rs  put_stream_content_id_matches_post_retry.rs  put_stream_dropped_aborts_multipart.rs  throttled_put_recovers_via_retry_hint.rs
crates/rollout-cloud-aws/tests/support/: mod.rs
crates/rollout-cloud-gcp/: Cargo.toml  README.md
crates/rollout-cloud-gcp/docs/: bucket-setup.md
crates/rollout-cloud-gcp/src/: config.rs  error.rs  lib.rs
crates/rollout-cloud-gcp/src/gcs/: get_stream.rs  mod.rs  put_stream.rs
crates/rollout-cloud-gcp/src/mds/: mod.rs
crates/rollout-cloud-gcp/src/pubsub/: lease.rs  mod.rs
crates/rollout-cloud-gcp/src/secret_manager/: mod.rs
crates/rollout-cloud-gcp/tests/: conformance.rs  gcs_resumable_upload_preempted_mid_stream_reuploads_cleanly.rs  put_stream_content_id_matches_post_retry.rs
crates/rollout-cloud-gcp/tests/support/: mock_mds.rs  mock_secret_manager.rs  mod.rs
crates/rollout-cloud-local/: Cargo.toml
crates/rollout-cloud-local/src/: config.rs  lib.rs  object_store.rs  queue.rs  secrets.rs
crates/rollout-cloud-local/tests/: hints_linux.rs  hints_macos.rs  object_store.rs  queue_replay.rs  secrets.rs
crates/rollout-coordinator/: Cargo.toml
crates/rollout-coordinator/src/: config.rs  drain.rs  emitter.rs  epoch.rs  failure_scan.rs  fence.rs  heartbeat.rs  lease.rs  ledger.rs  lib.rs  main.rs  mock_run.rs  registry.rs  run.rs  steal.rs  work_item.rs
crates/rollout-coordinator/tests/: coord_restart.rs  failure_scan.rs  registry_persistence.rs  split_brain.rs  spot_drain.rs  steal_dedup.rs  support_smoke.rs
crates/rollout-core/: Cargo.toml  README.md
crates/rollout-core/src/: errors.rs  ids.rs  lib.rs
crates/rollout-core/tests/: dependency_direction.rs  error_taxonomy.rs  harness_surface.rs  id_types.rs  sampling_params_postcard.rs  schema_drift.rs  trait_surface.rs
crates/rollout-harness-eval/: Cargo.toml
crates/rollout-harness-eval/examples/: gen_fixtures.rs
crates/rollout-harness-eval/src/: backend.rs  eval_reports.rs  job.rs  lib.rs
crates/rollout-harness-eval/tests/: eval_loader_works_with_no_network.rs  eval_score_matches_lm_eval_harness.rs
crates/rollout-harness-text/: Cargo.toml
crates/rollout-harness-text/src/: episode.rs  lib.rs  reward.rs
crates/rollout-harness-text/tests/: echo_env.rs  env_deterministic_replay.rs  mock_reward_env.rs
crates/rollout-harness-tool/: Cargo.toml  README.md
crates/rollout-harness-tool/python/: runner.py
crates/rollout-harness-tool/src/: lib.rs
crates/rollout-harness-tool/tests/: http_ssrf.rs  macos_stub.rs  sandbox_negative.rs  sandbox_positive.rs
crates/rollout-plugin-host/: Cargo.toml
crates/rollout-plugin-host/src/: handle.rs  host.rs  lib.rs  manifest.rs
crates/rollout-plugin-host/tests/: cdylib_load.rs  manifest.rs  pyo3_load.rs  reload_cdylib_unsupported.rs  reload_pyo3.rs  reload_sidecar.rs  sidecar_load.rs  storage_integration.rs
crates/rollout-proto/: Cargo.toml  build.rs
crates/rollout-proto/proto/: plugin.proto  transport.proto
crates/rollout-proto/src/: lib.rs
crates/rollout-proto/tests/: codegen.rs  proto_files_present.rs
crates/rollout-runtime-batch/: Cargo.toml
crates/rollout-runtime-batch/src/: config.rs  coordinator.rs  io.rs  lib.rs  mock_backend.rs  state.rs  worker.rs
crates/rollout-runtime-batch/tests/: cas_state_machine.rs  content_id_derivation.rs  jsonl_roundtrip.rs  resume_skips_done.rs  worker_happy_path.rs
crates/rollout-snapshots/: Cargo.toml
crates/rollout-snapshots/src/: key.rs  lib.rs  policy.rs  tar_build.rs
crates/rollout-snapshots/tests/: bit_identical_resume_at_step_5_via_gcs.rs  bit_identical_resume_at_step_5_via_s3.rs  deterministic_tar.rs  list_and_prune.rs  save_restore_roundtrip.rs  snapshot_resume_s3_to_gcs_via_manual_copy.rs
crates/rollout-storage/: Cargo.toml
crates/rollout-storage/src/: config.rs  encoding.rs  lib.rs
crates/rollout-storage/tests/: crash_safety.rs  crud.rs  postgres_integration.rs  postgres_lease.rs  postgres_scan_bytes_parity.rs  tables.rs  txn.rs  watch.rs
crates/rollout-transport/: Cargo.toml
crates/rollout-transport/src/: client.rs  config.rs  health.rs  lib.rs  server.rs  tls.rs
crates/rollout-transport/tests/: config_invariants.rs  control_stream.rs  heartbeat.rs  tls_dev_ca.rs
(+365 files in other folders)
