[workspace]
members = [
    "crates/rollout-core",
    "crates/rollout-cli",
    "crates/rollout-proto",
    "crates/rollout-storage",
    "crates/rollout-cloud-local",
    "crates/rollout-cloud-aws",
    "crates/rollout-cloud-gcp",
    "crates/rollout-transport",
    "crates/rollout-plugin-host",
    "crates/rollout-coordinator",
    "crates/rollout-backend-vllm",
    "crates/rollout-runtime-batch",
    "crates/rollout-algo-sft",
    "crates/rollout-algo-rm",
    "crates/rollout-snapshots",
    "xtask",
]
# Dependency-direction violation fixtures are standalone manifests consumed by
# crates/rollout-core/tests/dependency_direction.rs (read as text, never built).
# Listed here so cargo never auto-discovers them as workspace members.
exclude = [
    "crates/rollout-core/tests/fixtures/violation_algo_uses_cloud_aws",
    "crates/rollout-core/tests/fixtures/violation_algo_uses_cloud_gcp",
    "crates/rollout-core/tests/fixtures/violation_cloud_aws_uses_gcp",
    "crates/rollout-core/tests/fixtures/violation_core_pulls_sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.91.0"
repository = "https://github.com/astiwari/rollout"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"
thiserror = "2.0.18"
async-trait = "0.1.89"
tracing = "0.1"
ulid = { version = "1.2.1", features = ["serde"] }
blake3 = "1.8.5"
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.18"

# Phase 2 — storage
redb               = "2.5"
postcard           = { version = "1.0", features = ["use-std"] }
smol_str           = { version = "=0.3.2", features = ["serde"] }

# Phase 2 — async runtime + observability extensions
tokio              = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "net", "process", "signal", "io-util"] }
tokio-util         = { version = "0.7", features = ["io", "rt"] }
tokio-stream       = { version = "0.1", features = ["sync", "net"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
humantime-serde    = "1.1"

# Phase 2 — transport
tonic              = { version = "0.14", features = ["tls-ring", "transport", "server", "channel", "router"] }
tonic-build        = "0.14"
tonic-prost        = "0.14"
tonic-prost-build  = "0.14"
protoc-bin-vendored = "3.0"
prost              = "0.14"
prost-types        = "0.14"
rustls             = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen              = "0.13"
bytes              = "1.7"

# Phase 2 — plugin host
pyo3                 = { version = "0.28", features = ["auto-initialize", "abi3-py311"] }
pyo3-async-runtimes  = { version = "0.28", features = ["tokio-runtime"] }
libloading           = "0.8"

# Phase 2 — cloud-local
sysinfo            = { version = "0.33", default-features = false, features = ["system"] }
nvml-wrapper       = "0.11"

# Phase 2 — common
toml               = "0.8"
hex                = "0.4"

# Phase 2 — dev/test
tempfile           = "3.10"
proptest           = "1.5"
assert_cmd         = "2.0"
predicates         = "3.1"

# Phase 3 — benches
criterion          = { version = "0.5", features = ["async_tokio"] }

# Phase 4 — Postgres backend (TRAIN-04)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "migrate", "json", "chrono", "uuid"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

# Phase 4 — snapshots (TRAIN-03)
tar = "0.4"
walkdir = "2.5"

# Phase 4 — MockBackend training extension
ndarray = { version = "0.16", features = ["serde"] }

# Phase 4 — futures stream for watch_stream parallel method
futures = "0.3"

# Phase 4 — chrono for Snapshot.created_at
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# Phase 4 — UUID for Postgres ULID-as-UUID round-trip
uuid = { version = "1.10", features = ["serde", "v4"] }

# Phase 4 — async-stream for PgListener-backed watch_stream (plan 04-03)
async-stream = "0.3"
