[workspace]
members = [
    "crates/rollout-core",
    "crates/rollout-cli",
    "crates/rollout-proto",
    "crates/rollout-storage",
    "crates/rollout-cloud-local",
    "crates/rollout-cloud-aws",
    "crates/rollout-cloud-gcp",
    "crates/rollout-transport",
    "crates/rollout-plugin-host",
    "crates/rollout-coordinator",
    "crates/rollout-backend-vllm",
    "crates/rollout-runtime-batch",
    "crates/rollout-algo-sft",
    "crates/rollout-algo-rm",
    "crates/rollout-harness-text",
    "crates/rollout-harness-tool",
    "crates/rollout-harness-eval",
    "crates/rollout-snapshots",
    "xtask",
]
# Dependency-direction violation fixtures are standalone manifests consumed by
# crates/rollout-core/tests/dependency_direction.rs (read as text, never built).
# Listed here so cargo never auto-discovers them as workspace members.
exclude = [
    "crates/rollout-core/tests/fixtures/violation_algo_uses_cloud_aws",
    "crates/rollout-core/tests/fixtures/violation_algo_uses_cloud_gcp",
    "crates/rollout-core/tests/fixtures/violation_cloud_aws_uses_gcp",
    "crates/rollout-core/tests/fixtures/violation_core_pulls_sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.91.1"
repository = "https://github.com/astiwari/rollout"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"
thiserror = "2.0.18"
async-trait = "0.1.89"
tracing = "0.1"
ulid = { version = "1.2.1", features = ["serde"] }
blake3 = "1.8.5"
clap = { version = "4", features = ["derive"] }
cargo_metadata = "0.18"

# Phase 2 — storage
redb               = "2.5"
postcard           = { version = "1.0", features = ["use-std"] }
smol_str           = { version = "=0.3.2", features = ["serde"] }

# Phase 2 — async runtime + observability extensions
tokio              = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "net", "process", "signal", "io-util"] }
tokio-util         = { version = "0.7", features = ["io", "rt"] }
tokio-stream       = { version = "0.1", features = ["sync", "net"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
humantime-serde    = "1.1"

# Phase 2 — transport
tonic              = { version = "0.14", features = ["tls-ring", "transport", "server", "channel", "router"] }
tonic-build        = "0.14"
tonic-prost        = "0.14"
tonic-prost-build  = "0.14"
protoc-bin-vendored = "3.0"
prost              = "0.14"
prost-types        = "0.14"
rustls             = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen              = "0.13"
bytes              = "1.7"

# Phase 2 — plugin host
pyo3                 = { version = "0.28", features = ["auto-initialize", "abi3-py311"] }
pyo3-async-runtimes  = { version = "0.28", features = ["tokio-runtime"] }
libloading           = "0.8"

# Phase 2 — cloud-local
sysinfo            = { version = "0.33", default-features = false, features = ["system"] }
nvml-wrapper       = "0.11"

# Phase 2 — common
toml               = "0.8"
hex                = "0.4"

# Phase 2 — dev/test
tempfile           = "3.10"
proptest           = "1.5"
assert_cmd         = "2.0"
predicates         = "3.1"

# Phase 3 — benches
criterion          = { version = "0.5", features = ["async_tokio"] }

# Phase 4 — Postgres backend (TRAIN-04)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "migrate", "json", "chrono", "uuid"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

# Phase 4 — snapshots (TRAIN-03)
tar = "0.4"
walkdir = "2.5"

# Phase 4 — MockBackend training extension
ndarray = { version = "0.16", features = ["serde"] }

# Phase 4 — futures stream for watch_stream parallel method
futures = "0.3"

# Phase 4 — chrono for Snapshot.created_at
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# Phase 4 — UUID for Postgres ULID-as-UUID round-trip
uuid = { version = "1.10", features = ["serde", "v4"] }

# Phase 4 — async-stream for PgListener-backed watch_stream (plan 04-03)
async-stream = "0.3"

# Phase 5 — AWS SDK (rollout-cloud-aws, CLOUD-01). MSRV-1.91 BUMP path (PRECURSOR-C
# decision: BUMP) → caret selectors, not `=`-exact pins. default-features off keeps
# the non-AWS workspace build slim (these are optional + feature-gated downstream).
aws-config             = { version = "1.8", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
aws-sdk-s3             = { version = "1",   default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client", "sigv4a"] }
aws-sdk-sqs            = { version = "1",   default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-sdk-secretsmanager = { version = "1",  default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-smithy-runtime     = { version = "1",  default-features = false, features = ["client", "rt-tokio"] }
aws-credential-types   = "1"
base64                 = "0.22"
hyper                  = { version = "1", features = ["server", "http1"] }
hyper-util             = { version = "0.1", features = ["tokio"] }
http-body-util         = "0.1"

# Phase 5 — GCP SDK cohort (yoshidan/google-cloud-rust, published as `gcloud-*`).
# Apache-2.0. Exact versions verified via `cargo search` on 2026-05-29:
#   gcloud-storage 1.3.0 · gcloud-pubsub 1.7.0 · gcloud-auth 1.3.0 · gcloud-metadata 1.0.2.
# NOTE (deviation from plan): the planned `gcloud-secretmanager-v1` + `gcloud_auth::credentials::mds`
# names belong to the separate, not-yet-stabilized official `googleapis/google-cloud-rust` cohort,
# which pulls an incompatible tonic/gax tree. We use the verified `gcloud-*` cohort here and reach
# Secret Manager over its REST API via the cohort's pinned `reqwest`, and GCE MDS via `gcloud-metadata`.
# default-features tuned to keep the non-GCP workspace build slim (these are optional + feature-gated).
gcloud-storage         = { version = "1.3", default-features = false, features = ["rustls-tls", "auth", "jwt-aws-lc-rs"] }
gcloud-pubsub          = { version = "1.7", default-features = false, features = ["rustls-tls", "auth"] }
gcloud-googleapis      = "1.3"
gcloud-auth            = { version = "1.3", default-features = false, features = ["rustls-tls", "jwt-aws-lc-rs"] }
gcloud-metadata        = "1.0"
token-source           = "1.0"
reqwest                = { version = "0.13", default-features = false, features = ["json", "rustls"] }
futures-util           = "0.3"
# Phase 5 — `rollout cloud doctor` TLS reachability probe (rustls 0.23-compatible).
tokio-rustls           = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots           = "1.0"

# Phase 7 — Tool-harness sandbox (HARNESS-02). Linux-only; macOS compiles to a
# stub so these stay platform-gated (`[target.'cfg(target_os = "linux")']`) in
# rollout-harness-tool. Pins verified against crates.io 2026-06-01: all four are
# the current max-stable and match STACK (rustix 1.1.4 / landlock 0.4.5 /
# seccompiler 0.5.0 / cap-std 4.0.2).
rustix      = { version = "=1.1.4", features = ["process", "fs", "thread", "stdio"] }
landlock    = "=0.4.5"
seccompiler = "=0.5.0"
cap-std     = "=4.0.2"

# Phase 7 — Eval datasets (HARNESS-03). hf-hub BUMPED from STACK's 0.3 → 0.4:
# 0.3.x exposes NO `rustls-tls` feature (its `online`/`tokio` features pull
# native-tls/openssl, violating the cargo-deny ban — RESEARCH Pitfall G), so the
# STACK 0.3 pin is unsatisfiable under rustls-only. 0.4.x adds `rustls-tls`.
# `default-features = false` drops `default-tls` (native-tls). parquet/arrow-array
# stay at the STACK 55 cohort (rust_version 1.81 ≤ MSRV 1.91.1, exposes async+arrow).
hf-hub      = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"] }
parquet     = { version = "55", default-features = false, features = ["async", "arrow"] }
arrow-array = "55"
