[package]
name = "rollout-algo-rm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Bradley-Terry reward-model training — TRAIN-02."

[lints]
workspace = true

[dependencies]
rollout-core = { path = "../rollout-core", version = "0.1" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
