[package]
name = "rollout-algo-rm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Bradley-Terry reward-model training — TRAIN-02."

[lints]
workspace = true

[dependencies]
rollout-core = { path = "../rollout-core", version = "0.1" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
chrono = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rollout-runtime-batch = { path = "../rollout-runtime-batch", features = ["test-mock-backend"] }
rollout-snapshots = { path = "../rollout-snapshots", version = "0.1" }
rollout-storage = { path = "../rollout-storage", version = "0.1" }
rollout-cloud-local = { path = "../rollout-cloud-local", version = "0.1" }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
ndarray = { workspace = true }
