[package]
name = "rollout-backend-vllm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "vLLM-backed InferenceBackend (PyO3 in-process)"

[lints]
workspace = true

[features]
default = []
# Gates the live PyO3 init path; tests are #[ignore]'d unless ROLLOUT_VLLM_AVAILABLE=1.
vllm = []
# Phase 4: training-mode forward/backward through HF transformers + accelerate
# via the SAME dedicated Python OS thread. Implies `vllm` because the thread
# infrastructure is shared. Trait wiring lands in plan 04-05.
train = ["vllm", "dep:ulid"]

[dependencies]
rollout-core         = { path = "../rollout-core", version = "0.1" }
pyo3                 = { workspace = true }
pyo3-async-runtimes  = { workspace = true }
async-trait          = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
thiserror            = { workspace = true }
tokio                = { workspace = true }
tracing              = { workspace = true }
blake3               = { workspace = true }
postcard             = { workspace = true }
# Phase-4: minted target_dir for save_weights (used only under --features train).
ulid                 = { workspace = true, optional = true }

[dev-dependencies]
criterion            = { workspace = true }
tempfile             = { workspace = true }
toml                 = { workspace = true }
# Phase-4 train dev-deps — used by snapshot_resume_live.rs gated test.
rollout-snapshots    = { path = "../rollout-snapshots" }
rollout-storage      = { path = "../rollout-storage" }
rollout-cloud-local  = { path = "../rollout-cloud-local" }

[[bench]]
name = "throughput"
harness = false
