[package]
name = "rollout-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "rollout CLI binary"

[[bin]]
name = "rollout"
path = "src/main.rs"

[lints]
workspace = true

[features]
default              = []
# Live vLLM engine path (--features vllm propagates to rollout-backend-vllm).
vllm                 = ["rollout-backend-vllm/vllm"]
# Phase-4 training path: vllm + train mode on the backend.
train                = ["rollout-backend-vllm/vllm", "rollout-backend-vllm/train"]
# Swaps VllmBackend for MockBackend at runtime when ROLLOUT_TEST_MOCK_BACKEND=1.
test-mock-backend    = ["rollout-runtime-batch/test-mock-backend"]
# AWS cloud backends (S3 / SQS / SecretsManager / IMDSv2). Default-off (D-FEAT-01).
aws                  = ["dep:rollout-cloud-aws", "rollout-cloud-aws/aws", "dep:aws-config", "dep:aws-sdk-s3", "dep:aws-sdk-sqs", "dep:aws-sdk-secretsmanager"]

[dependencies]
rollout-core         = { path = "../rollout-core",          version = "0.1" }
rollout-coordinator  = { path = "../rollout-coordinator",   version = "0.1" }
rollout-transport    = { path = "../rollout-transport",     version = "0.1" }
rollout-storage      = { path = "../rollout-storage",       version = "0.1" }
rollout-plugin-host  = { path = "../rollout-plugin-host",   version = "0.1" }
rollout-proto        = { path = "../rollout-proto",         version = "0.1" }
rollout-cloud-local  = { path = "../rollout-cloud-local",   version = "0.1" }
rollout-runtime-batch = { path = "../rollout-runtime-batch", version = "0.1" }
rollout-backend-vllm = { path = "../rollout-backend-vllm",  version = "0.1" }
rollout-algo-sft     = { path = "../rollout-algo-sft",      version = "0.1" }
rollout-algo-rm      = { path = "../rollout-algo-rm",       version = "0.1" }
rollout-snapshots    = { path = "../rollout-snapshots",     version = "0.1" }
rollout-cloud-aws    = { path = "../rollout-cloud-aws",     version = "0.1", optional = true }
aws-config             = { workspace = true, optional = true }
aws-sdk-s3             = { workspace = true, optional = true }
aws-sdk-sqs            = { workspace = true, optional = true }
aws-sdk-secretsmanager = { workspace = true, optional = true }
clap                 = { workspace = true }
serde_json           = { workspace = true }
schemars             = { workspace = true }
serde                = { workspace = true }
tokio                = { workspace = true, features = ["signal", "process"] }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
toml                 = { workspace = true }
ulid                 = { workspace = true }
prost-types          = { workspace = true }
glob                 = "0.3"
smol_str             = { workspace = true }
tokio-util           = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile   = { workspace = true }
