[package]
name = "rollout-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "rollout-coordinator"
path = "src/main.rs"

[dependencies]
rollout-core      = { path = "../rollout-core",      version = "0.1" }
rollout-storage   = { path = "../rollout-storage",   version = "0.1" }
rollout-transport = { path = "../rollout-transport", version = "0.1" }
async-trait        = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tokio              = { workspace = true, features = ["io-std"] }
smol_str           = { workspace = true }
postcard           = { workspace = true }
clap               = { workspace = true }
ulid               = { workspace = true }
toml               = { workspace = true }

[dev-dependencies]
tempfile           = { workspace = true }
tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
