[package]
name = "rollout-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Trait surface, types, errors, and config schema for the rollout framework"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
ulid = { workspace = true }
blake3 = { workspace = true }
smol_str = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# Phase 4 — Snapshotter timestamps + parallel watch_stream + cancellation token
chrono = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
cargo_metadata = { workspace = true }
postcard = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
