[package]
name = "rollout-harness-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "EvalHarness (HARNESS-03): bundled MMLU/IFEval/GSM8K, eval-as-WorkQueue-job, eval_reports storage"

[lints]
workspace = true

[dependencies]
rollout-core = { path = "../rollout-core", version = "0.1" }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
postcard     = { workspace = true }
smol_str     = { workspace = true }
# Dataset loading (hf-hub/parquet/arrow-array) is wired in Wave-1 plan 07-03;
# the workspace pins live in the root Cargo.toml [workspace.dependencies].

[dev-dependencies]
tokio  = { workspace = true, features = ["macros", "rt-multi-thread"] }
chrono = { workspace = true }
ulid   = { workspace = true }
